--- a/fnat-project/export_presets.cfg
+++ b/fnat-project/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../../GodotGamesExported/fnat-demo2-1.exe"
+export_path="../../../Downloads/fnat-project.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
